do316/materials/labs/ha-review/.solution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ha-review
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
